create page product

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -303,33 +303,36 @@
         Пропозиції
     </h2>
 
-    <div class="checkbox-container">
+    <div class="catalog-offers__wrapper">
 
-        <input type="checkbox" id="discountCheckbox" class="custom-checkbox">
-        <label for="discountCheckbox" class="custom-checkbox-label">
-            Зі знижкою
-        </label>
+        <div class="checkbox">
+
+    <input type="checkbox" id="discountCheckbox" class="checkbox__input">
+    <label for="discountCheckbox" class="checkbox__label icon icon--check">
+        Зі знижкою
+    </label>
+
+</div>
+
+<div class="checkbox">
+
+    <input type="checkbox" id="newArrivalCheckbox" class="checkbox__input">
+    <label for="newArrivalCheckbox" class="checkbox__label icon icon--check">
+        Новинка
+    </label>
+
+</div>
+
+<div class="checkbox">
+
+    <input type="checkbox" id="seasonalHitCheckbox" class="checkbox__input">
+    <label for="seasonalHitCheckbox" class="checkbox__label icon icon--check">
+        Хіт сезону
+    </label>
+
+</div>
 
     </div>
-
-    <div class="checkbox-container">
-
-        <input type="checkbox" id="newArrivalCheckbox" class="custom-checkbox">
-        <label for="newArrivalCheckbox" class="custom-checkbox-label">
-            Новинка
-        </label>
-
-    </div>
-
-    <div class="checkbox-container">
-
-        <input type="checkbox" id="seasonalHitCheckbox" class="custom-checkbox">
-        <label for="seasonalHitCheckbox" class="custom-checkbox-label">
-            Хіт сезону
-        </label>
-
-    </div>
-
 
 </div>
 
