--- a/src/modules/pages/catalog/catalog-offers/_catalog-offers.html
+++ b/src/modules/pages/catalog/catalog-offers/_catalog-offers.html
@@ -4,32 +4,10 @@
         Пропозиції
     </h2>
 
-    <div class="checkbox-container">
+    <div class="catalog-offers__wrapper">
 
-        <input type="checkbox" id="discountCheckbox" class="custom-checkbox">
-        <label for="discountCheckbox" class="custom-checkbox-label">
-            Зі знижкою
-        </label>
+        @include('../../../components/checkbox/_checkbox.html')
 
     </div>
-
-    <div class="checkbox-container">
-
-        <input type="checkbox" id="newArrivalCheckbox" class="custom-checkbox">
-        <label for="newArrivalCheckbox" class="custom-checkbox-label">
-            Новинка
-        </label>
-
-    </div>
-
-    <div class="checkbox-container">
-
-        <input type="checkbox" id="seasonalHitCheckbox" class="custom-checkbox">
-        <label for="seasonalHitCheckbox" class="custom-checkbox-label">
-            Хіт сезону
-        </label>
-
-    </div>
-
 
 </div>
