--- a/src/modules/pages/product/product-gallery/_product-gallery.html
+++ b/src/modules/pages/product/product-gallery/_product-gallery.html
@@ -1,8 +1,4 @@
-<section class="section product-gallery">
-
-    <div class="container">
-
-        <div class="wrapper">
+<section class="product-gallery">
 
             <h2 class="title product-gallery__title">
                 Чізбургер з листям салату
@@ -47,7 +43,5 @@
                 <a class="" href="#">Детальніше</a>
 
             </div>
-        </div>
-    </div>
 
 </section>
