--- a/src/product.html
+++ b/src/product.html
@@ -191,11 +191,7 @@
 
                 <main class="main">
 
-                    <section class="section product-gallery">
-
-    <div class="container">
-
-        <div class="wrapper">
+                    <section class="product-gallery">
 
             <h2 class="title product-gallery__title">
                 Чізбургер з листям салату
@@ -240,33 +236,79 @@
                 <a class="" href="#">Детальніше</a>
 
             </div>
-        </div>
-    </div>
 
 </section>
 
-                    <div class="product-description">
+                    <div class="product-info">
 
-    <span class="product-description__details">
-        Опис
-    </span>
+    <div class="product-info__details">
 
-    <span class="product-description__traits">
-        Характеристики
-    </span>
+        <a class="product-info__details-title">
+            Опис
+        </a>
 
-    <span class="product-description__reviews">
-        Відгуки (2)
-    </span>
-
-    <div class="product-description__text">
-        <p>
-            Рубаний біфштекс із натуральної яловичини на карамелізованій булочці, зі скибочкою сиру "Чеддер", кетчупом,
-            гірчицею, цибулею та маринованими огірочками.
-            Алергени: глютен, молоко, гірчиця. Може містити сою, яйце, сліди кунжуту
-            Зовнішній вигляд товару може відрізнятися від зображень, представлених на сайті.
-        </p>
+        <div class="product-info__details-text">
+            <p>
+                Рубаний біфштекс із натуральної яловичини на карамелізованій булочці, зі скибочкою сиру "Чеддер", кетчупом,
+                гірчицею, цибулею та маринованими огірочками.
+                Алергени: глютен, молоко, гірчиця. Може містити сою, яйце, сліди кунжуту
+                Зовнішній вигляд товару може відрізнятися від зображень, представлених на сайті.
+            </p>
+        </div>
+        
     </div>
+
+    <div class="product-info__traits">
+
+        <a class="product-info__traits-title">
+            Характеристики
+        </a>
+
+        <div class="product-info__wrapper">
+
+            <span class="product-info__traits-parameter">
+                Діаметр:
+                <span class="product-info__traits-value">
+                    20см
+                </span>
+            </span>
+
+            <span class="product-info__traits-parameter">
+                Вага:
+                <span class="product-info__traits-value">
+                    300гр
+                </span>
+            </span>
+
+            <span class="product-info__traits-parameter">
+                Калорійність (на 100г):
+                <span class="product-info__traits-value">
+                    295 ккал
+                </span>
+            </span>
+
+            <span class="product-info__traits-parameter">
+                Термін зберігання:
+                <span class="product-info__traits-value">
+                    до 3діб
+                </span>
+            </span>
+        </div>
+
+    </div>
+
+    <div class="product-info__reviews-box">
+        <a class="product-info__reviews">
+            Відгуки (2)
+        </a>
+    </div>
+
+
+
+
+
+
+
 
 
 </div>
