fix main and product

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -12,8 +12,7 @@
     <link href="../assets/icons/favicon/site.webmanifest" rel="manifest" />
     <link href="../assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838" />
 
-    
-    <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/swiper@11.0.5/swiper-bundle.min.css" rel="stylesheet">
     <link href="./css/nouislider.min.css" rel="stylesheet">
     <link href="./css/style.min.css" rel="stylesheet">
 </head>
@@ -205,26 +204,38 @@
 
     <div class="dropdown">
 
-    <label for="toggle1" class="dropdown__text icon icon--chevron-down">За ціною</label>
-    <input type="checkbox" id="toggle1" class="dropdown__toggle">
+    <label for="dropdown1" class="dropdown__text icon icon--chevron-down">За ціною</label>
+    <input type="checkbox" id="dropdown1" class="dropdown__toggle">
 
     <ul class="dropdown__content">
-        <li><a class="dropdown__link" href="#">За ціною</a></li>
-        <li><a class="dropdown__link" href="#">За назвою</a></li>
-        <li><a class="dropdown__link" href="#">За розміром</a></li>
+        <li class="dropdown__item">
+            <button class="dropdown__btn" href="#">За ціною</button>
+        </li>
+        <li class="dropdown__item">
+            <button class="dropdown__btn" href="#">За назвою</button>
+        </li>
+        <li class="dropdown__item">
+            <button class="dropdown__btn" href="#">За розміром</button>
+        </li>
     </ul>
 
 </div>
 
 <div class="dropdown">
 
-    <label for="toggle2" class="dropdown__text icon icon--chevron-down">По 12</label>
-    <input type="checkbox" id="toggle2" class="dropdown__toggle">
+    <label for="dropdown2" class="dropdown__text icon icon--chevron-down">По 12</label>
+    <input type="checkbox" id="dropdown2" class="dropdown__toggle">
 
     <ul class="dropdown__content">
-        <li><a class="dropdown__link" href="#">По 12</a></li>
-        <li><a class="dropdown__link" href="#">По 8</a></li>
-        <li><a class="dropdown__link" href="#">По 4</a></li>
+        <li class="dropdown__item">
+            <button class="dropdown__btn" href="#">По 12</button>
+        </li>
+        <li class="dropdown__item">
+            <button class="dropdown__btn" href="#">По 8</button>
+        </li>
+        <li class="dropdown__item">
+            <button class="dropdown__btn" href="#">По 4</button>
+        </li>
     </ul>
 
 </div>
@@ -826,10 +837,9 @@
     </a>
 </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="./js/nouislider.min.js"></script> 
-<script src="./js/main.js"></script> 
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11.0.5/swiper-bundle.min.js"></script>
+<script src="./js/nouislider.min.js"></script>
+<script src="./js/main.js"></script>
 
 </body>
 
