--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,13 @@
     <link href="../assets/icons/favicon/site.webmanifest" rel="manifest" />
     <link href="../assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838" />
 
-    
-    <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/swiper@11.0.5/swiper-bundle.min.css" rel="stylesheet">
     <link href="./css/nouislider.min.css" rel="stylesheet">
     <link href="./css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="wrappert">
+    <div class="wrapper">
 
         <header class="header" id="header">
     <div class="container">
@@ -489,6 +488,7 @@
     </div>
 
     </div>
+
 </section>
                 <section class="review section" id="review">
 
