--- a/src/modules/index.html
+++ b/src/modules/index.html
@@ -4,7 +4,7 @@
 @include('./components/head/_head.html')
 
 <body>
-    <div class="wrappert">
+    <div class="wrapper">
 
         @include('./components/header/_header.html')
 
