--- a/src/modules/pages/main/application/_application.html
+++ b/src/modules/pages/main/application/_application.html
@@ -19,10 +19,16 @@
             <ul class="application__list">
 
                 <li class="application__item">
+                    <span class="sr-only">
+                        Перейти на сторінку єпл стор, для завантаження додатку.
+                    </span>
                     <a class="application__link application__link--apple" href="#"></a>
                 </li>
 
                 <li class="application__item">
+                    <span class="sr-only">
+                        Перейти на сторінку гугл плей, для завантаження додатку.
+                    </span>
                     <a class="application__link application__link--google" href="#"></a>
                 </li>
 
