--- a/src/modules/pages/main/review/_review.html
+++ b/src/modules/pages/main/review/_review.html
@@ -19,13 +19,19 @@
 
                 <button
                     class="review-slider__btn review-slider__btn--prev slider-actions__btn slider-actions__btn--prev icon icon--prev"
-                    type="button"></button>
+                    type="button">
+                    <span class="sr-only">Нерелистнути слайд вліло</span>
+                </button>
 
-                <div class="review-slider__dots slider-actions__dots"></div>
+                <div class="review-slider__dots slider-actions__dots">
+                    <span class="sr-only">Навігація по слайдам</span>
+                </div>
 
                 <button
                     class="review-slider__btn review-slider__btn--next slider-actions__btn slider-actions__btn--next icon icon--next"
-                    type="button"></button>
+                    type="button">
+                    <span class="sr-only">Нерелистнути слайд вправо</span>
+                </button>
 
             </div>
 
