--- a/src/modules/product.html
+++ b/src/modules/product.html
@@ -27,7 +27,8 @@
 
             @include('./components/footer/_footer.html')
 
-            @include('./components/scripts/_scripts.html')
+            <script src="./js/swiperjs.min.js"></script>
+            <script src="./js/main.js"></script>
 
         </div>
 
