--- a/src/product.html
+++ b/src/product.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Food</title>
+    <title>@title</title>
 
     <link href="../assets/icons/favicon/favicon.ico" rel="icon" sizes="48x48">
     <link href="../assets/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
-    <link href="../assets/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon" />
-    <link href="../assets/icons/favicon/site.webmanifest" rel="manifest" />
-    <link href="../assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838" />
+    <link href="../assets/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="../assets/icons/favicon/site.webmanifest" rel="manifest">
+    <link href="../assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838">
 
-    <link href="https://cdn.jsdelivr.net/npm/swiper@11.0.5/swiper-bundle.min.css" rel="stylesheet">
+    <link href="./css/swiperjs.min.css" rel="stylesheet">
     <link href="./css/nouislider.min.css" rel="stylesheet">
     <link href="./css/style.min.css" rel="stylesheet">
 </head>
@@ -65,6 +65,7 @@
                 </li>
             </ul>
 
+            
             <div class="mobile-menu">
 
     <button class="burger icon icon--burger-open" type="button">
@@ -75,81 +76,117 @@
 
         <div class="mobile-menu__header">
 
-            <a class="logo mobile-menu__logo" href="#header">
-                <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
-            </a>
-
             <button class="burger__close icon icon--burger-close" type="button">
                 <span class="sr-only">Закрити меню</span>
             </button>
 
         </div>
 
-        <ul class="menu__list mobile-menu__list">
-            <li class="menu__item mobile-menu__item">
-                <a class="menu__link menu__link--active mobile-menu__link" href="#header">Головна</a>
-            </li>
+        <h2 class="mobile-menu__title">
+            Категорії
+        </h2>
 
-            <li class="menu__item  mobile-menu__item">
-                <a class="menu__link mobile-menu__link" href="#categories">Страви</a>
+        <ul class="mobile-menu--catalog__list">
+            <li class="mobile-menu--catalog__item">
+                <a href="#">
+                    Бургери
+                </a>
             </li>
-
-            <li class="menu__item  mobile-menu__item">
-                <a class="menu__link mobile-menu__link" href="#footer">Контакти</a>
+            <li class="mobile-menu--catalog__item">
+                <a href="#">
+                    Піца
+                </a>
+            </li>
+            <li class="mobile-menu--catalog__item">
+                <a href="#">
+                    Сендвічі
+                </a>
+            </li>
+            <li class="mobile-menu--catalog__item">
+                <a href="#">
+                    Азійська кухня
+                </a>
+            </li>
+            <li class="mobile-menu--catalog__item">
+                <a href="#">
+                    Сети
+                </a>
+            </li>
+            <li class="mobile-menu--catalog__item">
+                <a href="#">
+                    Європейська кухня
+                </a>
+            </li>
+            <li class="mobile-menu--catalog__item">
+                <a href="#">
+                    Напої
+                </a>
+            </li>
+            <li class="mobile-menu--catalog__item">
+                <a href="#">
+                    Алкоголь
+                </a>
             </li>
         </ul>
 
-        <address class="address mobile-menu__address">
-            <ul class="address__list">
+        <h2 class="mobile-menu__title">
+            Пропозиції
+        </h2>
 
-                <li class="address__item">
-                    <a class="address__link link icon icon--location" href="#">
-                        вул. Т.Г. Шевченка, 1
-                    </a>
-                </li>
+        <div class="checkbox">
 
-                <li class="address__item">
-                    <a class="address__link link icon icon--call" href="tel:+380501112233">
-                        380501112233
-                    </a>
-                </li>
+    <input type="checkbox" id="discountCheckbox" class="checkbox__input">
+    <label for="discountCheckbox" class="checkbox__label icon icon--check">
+        Зі знижкою
+    </label>
 
-                <li class="address__item">
-                    <a class="address__link link icon icon--message" href="mailto:support@sfood.com">
-                        support@sfood.com
-                    </a>
-                </li>
+</div>
 
-            </ul>
+<div class="checkbox">
 
-            <ul class="social mobile-menu__social">
+    <input type="checkbox" id="newCheckbox" class="checkbox__input">
+    <label for="newCheckbox" class="checkbox__label icon icon--check">
+        Новинка
+    </label>
 
-                <li class="social__item mobile-menu__social-list">
-                    <a class="social__link icon icon--social icon--facebook" href="#">
-                        <span class="sr-only">
-                            Відкрити сторінку Facebook
-                        </span>
-                    </a>
-                </li>
+</div>
 
-                <li class="social__item">
-                    <a class="social__link icon icon--social icon--twitter" href="#">
-                        <span class="sr-only">
-                            Відкрити сторінку Twitter
-                        </span>
-                    </a>
-                </li>
+<div class="checkbox">
 
-                <li class="social__item">
-                    <a class="social__link icon icon--social icon--instagram" href="#">
-                        <span class="sr-only">
-                            Відкрити сторінку Instagram
-                        </span>
-                    </a>
-                </li>
+    <input type="checkbox" id="seasonHitCheckbox" class="checkbox__input">
+    <label for="seasonHitCheckbox" class="checkbox__label icon icon--check">
+        Хіт сезону
+    </label>
 
-            </ul>
-        </address>
+</div>
+
+        <div class="price">
+
+    <label class="price__label" for="minPrice">
+        <span class="price__text">
+            від
+        </span>
+        <input class="price__input" type="number" id="minPrice" name="minPrice" min="1" step="1" max="9999" value="100">
+        <span class="price__text">
+            &#8372;
+        </span>
+    </label>
+
+    <label class="price__label" for="maxPrice">
+        <span class="price__text">
+            до
+        </span>
+        <input class="price__input" type="number" id="maxPrice" name="maxPrice" min="1" step="1" max="9999"
+            value="1000">
+        <span class="price__text">
+            &#8372;
+        </span>
+    </label>
+
+</div>
+
+        <div class="price-slider"></div>
+
     </nav>
 
 </div>
@@ -173,7 +210,7 @@
             </li>
 
             <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link link" href="./catalog.html">
+                <a class="breadcrumbs__link link  icon icon--chevron-right" href="./catalog.html">
                     Каталог продуктів
                 </a>
             </li>
@@ -619,9 +656,8 @@
     </a>
 </footer>
 
-            <script src="https://cdn.jsdelivr.net/npm/swiper@11.0.5/swiper-bundle.min.js"></script>
-<script src="./js/nouislider.min.js"></script>
-<script src="./js/main.js"></script>
+            <script src="./js/swiperjs.min.js"></script>
+            <script src="./js/main.js"></script>
 
         </div>
 
