--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple food | Головна сторінка</title>
+    <title>
+        Simple food | Головна сторінка
+    </title>
 
     <link href="../assets/icons/favicon/favicon.ico" rel="icon" sizes="48x48">
     <link href="../assets/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
@@ -236,7 +238,7 @@
 
         <ul class="product-list">
 
-    <li class="product-list__item" data-category="burgers">
+    <li class="swiper-slide product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
             <img class="product-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
@@ -245,7 +247,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item" data-category="pizzas">
+</li><li class="swiper-slide product-list__item" data-category="pizzas">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
             <img class="product-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
@@ -254,7 +256,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item" data-category="sandviches">
+</li><li class="swiper-slide product-list__item" data-category="sandviches">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
             <img class="product-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
@@ -263,7 +265,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item" data-category="sandviches">
+</li><li class="swiper-slide product-list__item" data-category="sandviches">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
             <img class="product-card__img" src="../assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
@@ -272,7 +274,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item" data-category="pizzas">
+</li><li class="swiper-slide product-list__item" data-category="pizzas">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
             <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
@@ -281,7 +283,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item" data-category="asians">
+</li><li class="swiper-slide product-list__item" data-category="asians">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
             <img class="product-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
@@ -290,7 +292,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item" data-category="dishes">
+</li><li class="swiper-slide product-list__item" data-category="dishes">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
             <img class="product-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
@@ -299,7 +301,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item" data-category="burgers">
+</li><li class="swiper-slide product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
             <img class="product-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
@@ -308,7 +310,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item" data-category="burgers">
+</li><li class="swiper-slide product-list__item" data-category="burgers">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
             <img class="product-card__img" src="../assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
@@ -317,7 +319,7 @@
         </a>
         <button class="btn product-card__btn" type="button">До кошика</button>
     </article>
-</li><li class="product-list__item" data-category="asians">
+</li><li class="swiper-slide product-list__item" data-category="asians">
     <article class="product-card">
         <a class="link product-card__link" href="./product.html">
             <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
@@ -577,17 +579,25 @@
                 <button
                     class="review-slider__btn review-slider__btn--prev slider-actions__btn slider-actions__btn--prev icon icon--prev"
                     type="button">
-                    <span class="sr-only">Нерелистнути слайд вліло</span>
+                    <span class="sr-only">
+                        Нерелистнути слайд вліло
+                    </span>
                 </button>
 
                 <div class="review-slider__dots slider-actions__dots">
-                    <span class="sr-only">Навігація по слайдам</span>
+                    <div class="review-slider__dots slider-actions__dots">
+                        <span class="sr-only">
+                            Навігація по слайдам
+                        </span>
+                    </div>
                 </div>
 
                 <button
                     class="review-slider__btn review-slider__btn--next slider-actions__btn slider-actions__btn--next icon icon--next"
                     type="button">
-                    <span class="sr-only">Нерелистнути слайд вправо</span>
+                    <span class="sr-only">
+                        Нерелистнути слайд вправо
+                    </span>
                 </button>
 
             </div>
