--- a/src/modules/catalog.html
+++ b/src/modules/catalog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
 
-@include('./components/head/_head.html', {'title': 'Simple food | Каталог страв'})
+@include('./components/head/_head.html', {'title': 'Simple food | Каталог продуктів'})
 
 <body>
 
