--- a/src/modules/pages/catalog/catalog-promo/_catalog-promo.html
+++ b/src/modules/pages/catalog/catalog-promo/_catalog-promo.html
@@ -1,8 +1,10 @@
-<section class="section promo">
+<section class="promo section">
+
+    <h2 class="title promo__title">
+        Акції та знижки
+    </h2>
 
     <div class="promo__inner">
-
-        <h2 class="title promo__title">Акції та знижки</h2>
 
         <div class="swiper promo-slider">
 
@@ -16,9 +18,15 @@
         </div>
 
         <div class="promo-slider__actions slider-actions">
-            <div class="promo-slider__dots slider-actions__dots"></div>
+            <div class="promo-slider__dots slider-actions__dots">
+                <span class="sr-only">
+                    Навігація по слайдам
+                </span>
+            </div>
         </div>
 
+    </div>
+    
     </div>
 
 </section>
