--- a/src/catalog.html
+++ b/src/catalog.html
@@ -389,7 +389,7 @@
 
     <div class="catalog__wrapper">
 
-        <div class="catalog__sidebar">
+        <aside class="catalog__sidebar">
             <div class="catalog-categories">
 
     <h3 class="catalog__subtitle">
@@ -525,7 +525,7 @@
         <div class="price-slider"></div>
 
 </div>
-        </div>
+        </aside>
 
         <div class="catalog__box ">
 
