--- a/src/modules/pages/catalog/_catalog.html
+++ b/src/modules/pages/catalog/_catalog.html
@@ -28,13 +28,13 @@
 
     <div class="catalog__wrapper">
 
-        <div class="catalog__sidebar">
+        <aside class="catalog__sidebar">
             @include('./catalog-categories/_catalog-categories.html')
 
             @include('./catalog-offers/_catalog-offers.html')
 
             @include('./catalog-price/_catalog-price.html')
-        </div>
+        </aside>
 
         <div class="catalog__box ">
 
