--- a/src/product.html
+++ b/src/product.html
@@ -419,10 +419,110 @@
 </div>
 
                     <div class="product-catalog section">
-    
+
     <h2 class="title">
         Вас може зацікавити
     </h2>
+
+    <div class="swiper product-catalog-slider">
+
+        <ul class="swiper-wrapper product-catalog__wrapper product-catalog__list">
+
+            <li class="swiper-slide product-list__item" data-category="burgers">
+    <article class="product-card">
+        <a class="link product-card__link" href="./product.html">
+            <img class="product-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
+            <h3 class="link product-card__title">Чізбургер з листям салату</h3>
+            <span class="product-card__price">140 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="swiper-slide product-list__item" data-category="pizzas">
+    <article class="product-card">
+        <a class="link product-card__link" href="./product.html">
+            <img class="product-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
+            <h3 class="link product-card__title">Біфбургер</h3>
+            <span class="product-card__price">190 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="swiper-slide product-list__item" data-category="sandviches">
+    <article class="product-card">
+        <a class="link product-card__link" href="./product.html">
+            <img class="product-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
+            <h3 class="link product-card__title">Королівський чізбургер</h3>
+            <span class="product-card__price">260 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="swiper-slide product-list__item" data-category="sandviches">
+    <article class="product-card">
+        <a class="link product-card__link" href="./product.html">
+            <img class="product-card__img" src="../assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
+            <h3 class="link product-card__title">Чорний гамбургер</h3>
+            <span class="product-card__price">199 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="swiper-slide product-list__item" data-category="pizzas">
+    <article class="product-card">
+        <a class="link product-card__link" href="./product.html">
+            <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <h3 class="link product-card__title">Чікен бургер</h3>
+            <span class="product-card__price">180 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="swiper-slide product-list__item" data-category="asians">
+    <article class="product-card">
+        <a class="link product-card__link" href="./product.html">
+            <img class="product-card__img" src="../assets/images/categories/1@1x.webp" alt="фотографія чізбургера з листям салату" width="140" height="140">
+            <h3 class="link product-card__title">Чізбургер з листям салату</h3>
+            <span class="product-card__price">140 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="swiper-slide product-list__item" data-category="dishes">
+    <article class="product-card">
+        <a class="link product-card__link" href="./product.html">
+            <img class="product-card__img" src="../assets/images/categories/2@1x.webp" alt="фотографія Біфбургера" width="140" height="140">
+            <h3 class="link product-card__title">Біфбургер</h3>
+            <span class="product-card__price">190 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="swiper-slide product-list__item" data-category="burgers">
+    <article class="product-card">
+        <a class="link product-card__link" href="./product.html">
+            <img class="product-card__img" src="../assets/images/categories/3@1x.webp" alt="фотографія королівського чізбургера" width="140" height="140">
+            <h3 class="link product-card__title">Королівський чізбургер</h3>
+            <span class="product-card__price">260 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="swiper-slide product-list__item" data-category="burgers">
+    <article class="product-card">
+        <a class="link product-card__link" href="./product.html">
+            <img class="product-card__img" src="../assets/images/categories/4@1x.webp" alt="фотографія чорного гамбургера" width="140" height="140">
+            <h3 class="link product-card__title">Чорний гамбургер</h3>
+            <span class="product-card__price">199 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li><li class="swiper-slide product-list__item" data-category="asians">
+    <article class="product-card">
+        <a class="link product-card__link" href="./product.html">
+            <img class="product-card__img" src="../assets/images/categories/5@1x.webp" alt="фотографія чікен бургера" width="140" height="140">
+            <h3 class="link product-card__title">Чікен бургер</h3>
+            <span class="product-card__price">180 грн.</span>
+        </a>
+        <button class="btn product-card__btn" type="button">До кошика</button>
+    </article>
+</li>
+
+        </ul>
+
+    </div>
 
 </div>
 
