--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
         <nav class="menu">
 
-            <a class="logo header__logo" href="#hero">
+            <a class="logo header__logo" href="./index.html">
                 <img class="logo__img" src="./assets/images/logo.svg" alt="Логотип компанії" width="200" height="39">
             </a>
 
@@ -86,11 +86,11 @@
 
         <ul class="menu__list mobile-menu__list">
             <li class="menu__item mobile-menu__item">
-                <a class="menu__link menu__link--active mobile-menu__link" href="#header">Головна</a>
+                <a class="menu__link menu__link--active mobile-menu__link" href="./index.html">Головна</a>
             </li>
 
             <li class="menu__item  mobile-menu__item">
-                <a class="menu__link mobile-menu__link" href="#categories">Страви</a>
+                <a class="menu__link mobile-menu__link" href="./catalog.html">Страви</a>
             </li>
 
             <li class="menu__item  mobile-menu__item">
@@ -803,10 +803,10 @@
     </a>
 </footer>
 
-        <script src="./js/swiperjs.min.js"></script>
-        <script src="./js/main.js"></script>
-
     </div>
+
+    <script src="./js/swiperjs.min.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 
