--- a/src/modules/pages/catalog/catalog-offers/_catalog-offers.html
+++ b/src/modules/pages/catalog/catalog-offers/_catalog-offers.html
@@ -6,7 +6,20 @@
 
     <div class="catalog-offers__wrapper">
 
-        @include('../../../components/checkbox/_checkbox.html')
+        @include('../../../components/checkbox/_checkbox.html', {
+            checkboxId: 'discount',
+            checkboxName: 'Зі знижкою'
+        })
+
+        @include('../../../components/checkbox/_checkbox.html', {
+            checkboxId: 'newProuct',
+            checkboxName: 'Новинка'
+        })
+
+        @include('../../../components/checkbox/_checkbox.html', {
+            checkboxId: 'seasonHit',
+            checkboxName: 'Хіт сезону'
+        })
 
     </div>
 
