--- a/src/modules/pages/product/product-info/_product-info.html
+++ b/src/modules/pages/product/product-info/_product-info.html
@@ -2,7 +2,9 @@
 
     <div class="product-info__inner">
 
-        <div class="product-info__details-title">
+        <ul class="product-info__details-title">
+
+            <li></li>
 
             <a class="product-info__link link" href="#" >
                 Опис
@@ -16,7 +18,7 @@
                 Відгуки (2)
             </a>
     
-        </div>
+        </ul>
 
         <div class="product-info__box">
 
@@ -24,8 +26,13 @@
                 <p>
                     Рубаний біфштекс із натуральної яловичини на карамелізованій булочці, зі скибочкою сиру "Чеддер",
                     кетчупом,
-                    гірчицею, цибулею та маринованими огірочками.
-                    Алергени: глютен, молоко, гірчиця. Може містити сою, яйце, сліди кунжуту
+                </p>
+
+                <p>
+                    Алергени: глютен, молоко, гірчиця. Може містити сою, яйце, сліди кунжуту.
+                </p>
+
+                <p>
                     Зовнішній вигляд товару може відрізнятися від зображень, представлених на сайті.
                 </p>
             </div>
