--- a/src/modules/pages/main/product-list/_product-list.html
+++ b/src/modules/pages/main/product-list/_product-list.html
@@ -1,5 +1,6 @@
 <ul class="product-list">
 
-    @loop('../../../components/cards/product-card/_product-card.html', '../modules/components/cards/product-card/product-card.json')
+    @loop('../../../components/cards/product-card/_product-card.html',
+    '../modules/components/cards/product-card/product-card.json')
 
 </ul>
