--- a/src/modules/pages/product/product-catalog/_product-catalog.html
+++ b/src/modules/pages/product/product-catalog/_product-catalog.html
@@ -1,8 +1,32 @@
 <div class="product-catalog section">
 
-    <h2 class="title">
-        Вас може зацікавити
-    </h2>
+    <div class="product-catalog__inner">
+
+        <h2 class="product-catalog__title title">
+            Вас може зацікавити
+        </h2>
+
+        <div class="product-catalog__actions slider-actions">
+
+            <button
+                class="product-catalog__btn product-catalog__btn--prev slider-actions__btn slider-actions__btn--prev icon icon--prev"
+                type="button">
+                <span class="sr-only">
+                    Нерелистнути слайд вліло
+                </span>
+            </button>
+
+            <button
+                class="product-catalog__btn product-catalog__btn--next slider-actions__btn slider-actions__btn--next icon icon--next"
+                type="button">
+                <span class="sr-only">
+                    Нерелистнути слайд вправо
+                </span>
+            </button>
+
+        </div>
+
+    </div>
 
     <div class="swiper product-catalog-slider">
 
